# blackbox-exporter-operator

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  blackbox_ubuntu-22.04-amd64-2026-05-15T11:24:58.txt  blackbox_ubuntu-22.04-amd64-2026-05-20T08:30:29.txt  blackbox_ubuntu-22.04-arm64-2026-05-15T11:24:58.txt  blackbox_ubuntu-22.04-arm64-2026-05-20T08:30:29.txt  blackbox_ubuntu-22.04-ppc64el-2026-05-15T11:24:58.txt  blackbox_ubuntu-22.04-ppc64el-2026-05-20T08:30:29.txt  blackbox_ubuntu-22.04-s390x-2026-05-15T11:24:58.txt  blackbox_ubuntu-22.04-s390x-2026-05-20T08:30:29.txt  blackbox_ubuntu-24.04-amd64-2026-05-15T11:24:58.txt  blackbox_ubuntu-24.04-amd64-2026-05-20T08:30:29.txt  blackbox_ubuntu-24.04-arm64-2026-05-15T11:24:58.txt  blackbox_ubuntu-24.04-arm64-2026-05-20T08:30:29.txt  blackbox_ubuntu-24.04-ppc64el-2026-05-15T11:24:58.txt  blackbox_ubuntu-24.04-ppc64el-2026-05-20T08:30:29.txt  blackbox_ubuntu-24.04-s390x-2026-05-15T11:24:58.txt  blackbox_ubuntu-24.04-s390x-2026-05-20T08:30:29.txt  charmcraft.yaml  pyproject.toml  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: release.yaml
src/: blackbox_exporter.py  charm.py  constants.py  models.py  snap_management.py  utils.py
src/grafana_dashboards/: blackbox.json.tmpl
tests/integration/: conftest.py  test_charm.py  test_charm_and_scaling.py
tests/unit/: conftest.py  test_charm.py  test_config_validation.py  test_cos_agent.py  test_get_unit_networks.py  test_peer_relation.py  test_peer_relation_data.py  test_probes_file_validation.py
