# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "blackbox-exporter-operator"
version = "0.0"  # This field is not used
requires-python = "~=3.10"

# Dependencies of the charm code
# You should include the dependencies of the code in src/. You should also include the
# dependencies of any charmlibs that the charm uses (copy the dependencies from PYDEPS).
dependencies = [
    "ops>=3,<4",
    "cosl",
    "netifaces2",
]

[project.dependency-groups]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
  # Integration
  "ops[testing]",
  "jubilant",
]

# Testing tools configuration
[tool.coverage.run]
branch = true
# Include only source code
include = ["src", "tests"]
pythonVersion = "3.10"
pythonPlatform = "All"

[tool.coverage.report]
show_missing = true
# Omit tests from reports
omit = ["tests/*"]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src", "tests"]
